<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/main"
    android:layout_height="match_parent"
    android:background="@color/backgroundregis">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/todo"
            android:paddingTop="50dp"
            android:paddingBottom="60dp"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="100dp"
            android:text="@string/welcome"

            android:textAlignment="center"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu"
            android:paddingStart="10dp"
            android:paddingBottom="20dp"
            android:text="@string/txtregis"
            android:textSize="20sp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextEmailAddress3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextNumber2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/phonenumber"
            android:inputType="number"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/editTextTextPassword2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:autofillHints=""
            android:ems="10"
            android:fontFamily="@font/ubuntu"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            tools:ignore="RtlSymmetry" />

        <Button
            android:id="@+id/button4"
            style="@android:style/Widget.Material.Button.Inset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="100dp"
            android:layout_marginRight="100dp"
            android:background="#4C6ED7"
            android:fontFamily="@font/ubuntu"
            android:text="@string/btnregis"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktosignup"
        android:textStyle="bold"
        android:textColor="@color/mainblue"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="127dp"
        tools:layout_editor_absoluteY="664dp" />
</androidx.constraintlayout.widget.ConstraintLayout>
