<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundregis">

    <Button
        android:id="@+id/button"
        style="@android:style/Widget.Material.Button.Inset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainblue"
        android:fontFamily="@font/ubuntu"
        android:text="@string/btnsignup"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        tools:ignore="MissingConstraints"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="520dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="458dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/ubuntu"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="416dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ubuntu"
        android:paddingStart="10dp"
        android:paddingBottom="20dp"
        android:text="@string/txtsighup"
        android:textSize="20sp"
        tools:ignore="MissingConstraints,RtlSymmetry"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="350dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="100dp"
        android:text="@string/welcomeback"

        android:textAlignment="center"
        android:textSize="25sp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="216dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        android:paddingTop="50dp"
        android:paddingBottom="60dp"
        app:srcCompat="@drawable/ic_launcher_foreground"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-2dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/linktoregis"
        android:textStyle="bold"
        android:textColor="@color/mainblue"
        tools:layout_editor_absoluteX="137dp"
        tools:layout_editor_absoluteY="587dp"
        tools:ignore="MissingConstraints" />
</androidx.constraintlayout.widget.ConstraintLayout>